Fix overlay/dialog z-index clashes

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -23,7 +23,7 @@ body,
 }
 
 .bigOverlay {
-  z-index: 9999;
+  z-index: 999;
   height: 100%;
   font-size: 3em;
   color: white;
